[package]
name = "manual_encryption_layer"
version = "0.1.0"
authors = ["ARM32 <arm32.x@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
x448 = "0.6.0"
rand = "0.7.3"
clipboard = "0.5.0"
data-encoding = "2.2.1"
rust-crypto = "0.2.36"
ctrlc = "3.1.4"
